basic css files and assets

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,29 +6,9 @@
   <nav class='nav-main'>
   <ul class='navbar'>
     <li>
-      <%= link_to 'home', root_path %>
+      <%#= link_to 'home', root_path %>
     </li>
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-    <li>
-      <%= link_to 'home', root_path %>
-    </li>
-    <li>
-      <%= link_to 'home', root_path %>
+      <%#= link_to 'home', root_path %>
     </li>
   </ul>
   </nav>
