organized some locales

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,7 @@
 <footer class="container">
+	<div class="form-actions pull-left">
+		<%= language_links %>
+	</div>
 	<p id='developed-by' class="pull-right">
     Desenvolvido por <%= link_to '© 2MI', 'http://www.2mi.com.br/', :target => '_blank' %>
 	</p>
