scss files organized

--- a/app/assets/stylesheets/partials/_header.css.scss
+++ b/app/assets/stylesheets/partials/_header.css.scss
@@ -1,16 +1,7 @@
-@import 'colors_fonts';
- 
 //-----------------------------------------------//
-// Footer
+// Header
 //-----------------------------------------------//
 
-.footer-brand {
+header {
+  background-color: $background-light
 }
-
-footer{
-	ul { 
-		li {
-		}
-	}
-}
-
