--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="container">
-	<div class="form-actions pull-left">
+	<div class="form-actions left">
 		<%= language_links %>
 	</div>
-	<p id='developed-by' class="pull-right">
+	<p id='developed-by' class="right">
     Desenvolvido por <%= link_to '© 2MI', 'http://www.2mi.com.br/', :target => '_blank' %>
 	</p>
 </footer>
