--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,14 +4,13 @@
   </div>
 
   <nav class='nav-main'>
-  <ul class='navbar'>
-    <li>
-      <%#= link_to 'home', root_path %>
-    </li>
-      <%#= link_to 'home', root_path %>
-    </li>
-  </ul>
-  </nav>
+	<ul class='navbar'>
+		<li> <%= link_to 'home', root_path %> </li>
+		<li> <%= link_to 'home', root_path %> </li>
+		<li> <%= link_to 'home', root_path %> </li>
+		<li> <%= link_to 'home', root_path %> </li>
+	</ul>
+	</nav>
 
   <div class="tools">
   </div>
