contact back-end

--- a/app/assets/stylesheets/partials/_forms.css.scss
+++ b/app/assets/stylesheets/partials/_forms.css.scss
@@ -51,6 +51,9 @@ input[type=submit] {
 	}
 }
 
+.form-comments {
+	color: $neutral-light;
+}
 
 //-----------------------------------------------//
 // Form errors
