--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,9 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @post.title %></h1>
+
+<div class="attachment">
+  <%= link_to @post.attachment.name, @post.attachment.url, target: :blank %>
+</div>
 
 <p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
   <%= @post.body %>
 </p>
-
-<p>
-  <strong>Slug:</strong>
-  <%= @post.slug %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
