--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @page.title %></h1>
 
-<%= link_to 'página', Page.first %>
+<%= link_to 'página', page_group_page_path(Page.first.page_group, Page.first) %>
