--- a/app/assets/stylesheets/partials/_main.css.scss
+++ b/app/assets/stylesheets/partials/_main.css.scss
@@ -4,3 +4,17 @@
 
 body {
 }
+
+.content {
+  ul {
+    margin: 1em 0;
+    list-style: disc;
+    padding-left: 40px;
+
+    &.no-style {
+      margin: 0;
+      list-style: none;
+      padding: 0;
+    }
+  }
+}
